correct some alignment

--- a/style/index.css
+++ b/style/index.css
@@ -308,19 +308,19 @@ svg{
     position: absolute;
     /* border: 2px solid darkcyan; */
     left: 5%;
-    bottom: 0px;
+    bottom: -6px;
     z-index: 1;
 }
 
 #timeline-scale-stick2{
     position: absolute;
-    top: 54px;
+    top: 40px;
     z-index: 1;
     left: 20%;
 }
 #timeline-scale-stick3{
     position: absolute;
-    bottom: 0px;
+    bottom: -7px;
     z-index: 1;
     left: 35%;
 }
@@ -330,13 +330,13 @@ img[alt="cutting-cake"]{
 }
 #timeline-scale-stick4{
     position: absolute;
-    top: 91px;
+    top: 79px;
     z-index: 1;
     left: 50%;
 }
 #timeline-scale-stick5{
     position: absolute;
-    bottom: 0px;
+    bottom: -4px;
     z-index: 1;
     right: 17%;
 }
@@ -345,7 +345,7 @@ img[alt="party"]{
 }
 #timeline-scale-stick6{
     position: absolute;
-    top: 78px;
+    top: 65px;
     z-index: 1;
     right: 6%;
 }
